--- a/package.json
+++ b/package.json
@@ -1,20 +1,48 @@
 {
-  "name": "True Company",
+  "name": "true_company",
   "version": "1.0.0",
-  "description": "Financial accaunting for small business",
+  "description": "webchat-api",
   "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/server.js"
+    "start": "node ./app.js",
+    "build": "webpack --config webpack.development.config.js"
   },
   "repository": {
     "type": "git",
     "url": ".git"
   },
   "keywords": [
-    "accounting",
-    "small business"
+    "webchat"
   ],
   "author": "evelichko",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "history": "^4.7.2",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.3.0",
+    "nconf": "^0.10.0",
+    "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "winston": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-merge": "^4.1.4"
+  }
 }
