Registraion page is ready, changes: -Bugs fixed with warning message function; -Added new method for warning message function and for using it on onBlur event independently; -Added error catch statement in fetch for login validation and registration; -Added console messages for all situations; -Submit button CSS style added for disabled state;

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "true_company",
-  "version": "1.0.0",
+  "name": "Webchat",
+  "version": "0.0.2",
   "description": "webchat-api",
   "main": "Server.js",
   "scripts": {
