Registraion page: -reworked warning message function (it can be used now everywhere in the application without any changes); -added email validation handling for server response from DB;
Login page:
-Login functionality made(not completed for release).

Database:
-added Mongoose connection;
-created user model for DB;

Server:
-added route handling for registration POST route;
-added user model errors handling in error handling middleware;

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,11 @@
 {
     "port": "3000",
     "mongoose": {
-        "uri": "mongodb://localhost:27017/users",
+        "uri": "mongodb://localhost:27017/webchat",
         "options": {
+            "useCreateIndex": "true",
             "useNewUrlParser": "true",
-            "dbName": "visitors",
+            "dbName": "webchat",
             "reconnectTries": "20",
             "reconnectInterval": "1000"
         }
