--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "evelichko",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "history": "^4.7.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
+    "multer": "^1.4.1",
     "nconf": "^0.10.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
@@ -30,6 +32,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
+    "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   },
   "devDependencies": {
