User List: - added user list support; Main window: - UserName display was added; - Send messages feature now using Socket.IO; - Socket middleware was added to Redux store; Server: - Reworked authorization; - Session support was added; - Added login validation; - Express routing was moved to separate directory; - Socket.IO support was added;

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -9,5 +9,15 @@
             "reconnectTries": "20",
             "reconnectInterval": "1000"
         }
+    },
+    "session": {
+        "secret": "vRykqWmgPdfbZ1",
+        "key": "sid",
+        "resave": "true",
+        "saveUninitialized": "true",
+        "cookie": {
+            "httpOnly": "true",
+            "maxAge": 86400000
+        }
     }
 }
