--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "author": "evelichko",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^2.0.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "history": "^4.7.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
@@ -33,6 +36,8 @@
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "winston": "^3.1.0"
   },
   "devDependencies": {
