Server: -Reworked socket functionality, it sends users list array to the connected user now; -Router middlewares now redirect to '/webchat' path to prevent unauthorized sessions to proceed; -Session store was moved to separate module; Socket on front-end: -IO connects to the server only after usrname fetch; -New fuctionalities for userList was added but not handled on server yet;

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -12,12 +12,11 @@
     },
     "session": {
         "secret": "vRykqWmgPdfbZ1",
-        "key": "sid",
         "resave": "true",
         "saveUninitialized": "true",
         "cookie": {
             "httpOnly": "true",
-            "maxAge": 86400000
+            "maxAge": null
         }
     }
 }
