--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "evelichko",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^2.0.3",
     "cookie-parser": "^1.4.3",
